tests/negative/regression/r15.orng
fn main() -> Int { 
    errdefer 3.4 % unreachable * ? if - 4 { }
} 
